--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "lint": "next lint"
+    "build": "next build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
