--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build"
+    "build": "next build && next export"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
